--- a/styles/app.css
+++ b/styles/app.css
@@ -256,3 +256,60 @@ ul.bottom-content li:last-child{
 .prev-btn[disabled="false"], .next-btn[disabled="false"]{
     background-color: var(--accent-color);
 }
+.br {
+    border-radius: 8px;  
+  }
+  .w70 {
+     width: 70%;
+  }
+  .card {
+    border: 2px solid #fff;
+    box-shadow: 0px 0px 10px 0 #a9a9a9;
+    padding: 30px 40px;
+    min-height: 120px;
+    margin: 20px auto;
+  }
+  .profile-pic {
+    height: 65px;
+    width: 65px;
+    border-radius: 50%;
+  }
+  .comment {
+    height: 10px;
+    background: #777;
+    margin-top: 20px;
+  }
+  .wrapper {
+    width: 0px;
+    animation: fullView 0.5s forwards linear;
+  }
+  
+  @keyframes fullView {
+    100% {
+      width: 100%;
+    }
+  }
+  .animate {
+    animation : shimmer 2s infinite;
+    background: linear-gradient(to right, #eff1f3 4%, #e2e2e2 25%, #eff1f3 36%);
+    background-size: 1000px 100%;
+ }
+ @keyframes shimmer {
+    0% {
+      background-position: -1000px 0;
+    }
+    100% {
+      background-position: 1000px 0;
+    }
+  }
+
+  .shimmer-group{
+    width: 90%;
+    margin: 20px auto;
+  }
+  .shimmer-group .left-part-email{
+      width: 10%;
+  }
+  .shimmer-group .right-part-email{
+      width: 85%;
+  }
