--- a/views/index.html
+++ b/views/index.html
@@ -29,6 +29,7 @@
                 <div class="email-body hide">
                 </div>
             </div>
+            <div class="shimmer-group"></div>
         </main>
         <script type="module" src="../scripts/app.js" defer></script>
     </body>
