changes related to loading shimmer and navigating pages

--- a/views/index.html
+++ b/views/index.html
@@ -24,10 +24,8 @@
         </nav>
         <main>
             <div class="email-group">
-                <div class="email-list">
-                </div>
-                <div class="email-body hide">
-                </div>
+                <div class="email-list"></div>
+                <div class="email-body hide"></div>
             </div>
             <div class="shimmer-group"></div>
         </main>
