--- a/styles/app.css
+++ b/styles/app.css
@@ -18,7 +18,7 @@ header{
     background-color: var(--accent-color);
     height: 50px;
     display: flex;
-    width: 100vw;
+    width: 100%;
     align-items: center;
     justify-content: space-between;
 }
@@ -85,7 +85,6 @@ nav ul li span{
     overflow-x: hidden;
 }
 .email{
-    width: 100%;
     min-height: 160px;
     background-color: #fff;
     border: 1px solid var(--border-color);
@@ -266,7 +265,7 @@ ul.bottom-content li:last-child{
   .card {
     border: 2px solid #fff;
     box-shadow: 0px 0px 10px 0 #a9a9a9;
-    padding: 15px 40px;
+    padding: 15px;
     min-height: 160px;
     margin: 20px auto;
   }
