--- a/views/index.html
+++ b/views/index.html
@@ -20,6 +20,11 @@
                 <li><a href="/views/favorites.html">Favorites</a></li>
             </ul>
             <div class="pagination">
+                <ul>
+                    <li><button class="prev-btn" type="button">‹</button></li>
+                    <li><span class="pagination-text">1 of 2</span></li>
+                    <li><button class="next-btn" type="button">›</button></li>
+                </ul>
             </div>
         </nav>
         <main>
